--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,25 +33,7 @@
              id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">Обо мне</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/songs">Песни</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Войти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/to-do-list">Дела</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/books">Книги</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/manufacturer">Производители</a>
+                    <a class="nav-link" href="/">Концерты</a>
                 </li>
             </ul>
         </div>
