--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,17 @@
              id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Концерты</a>
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/concerts">Концерты</a>
+                </li>
+                <li class="nav-item">
+                    {% if current_user.is_authenticated %}
+                        <a class="nav-link" href="/logout">Выйти</a>
+                    {% else %}
+                        <a class="nav-link" href="/login">Войти</a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
