--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,37 +1,67 @@
+<!-- app/templates/register.html -->
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %}Регистрация - {{ super() }}{% endblock %}
 
 {% block content %}
-    <div class="container w-50 mt-5 d-flex flex-column align-items-center">
-        <img class="mb-4 mt-5" src="images/blogging.png" alt="" width="57" height="57">
-        <form action="/register" method="post">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+            <div class="card shadow mt-5">
+                <div class="card-body">
+                    <div class="text-center mb-4">
+                        <i class="fa fa-user-plus fa-3x text-success"></i>
+                        <h1 class="h3 mt-3 fw-normal">Регистрация</h1>
+                    </div>
 
-            <h1 class="h3 mb-3 fw-normal">Registration</h1>
+                    <form action="{{ url_for('register') }}" method="post">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="nameInput"
+                                   placeholder="Имя" name="name" required>
+                            <label for="nameInput">Имя</label>
+                        </div>
 
-            <div class="form-floating mb-2">
-                <input type="text" class="form-control" id="nameInput" placeholder="Имя" name="name">
-                <label for="nameInput">Имя</label>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="emailInput"
+                                   placeholder="Почта" name="email" required>
+                            <label for="emailInput">Почта</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="cityInput"
+                                   placeholder="Город" name="city">
+                            <label for="cityInput">Город (необязательно)</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="date" class="form-control" id="birthdayInput" name="birthday">
+                            <label for="birthdayInput">День рождения (необязательно)</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="password" class="form-control" id="passwordInput"
+                                   placeholder="Пароль" name="password" required>
+                            <label for="passwordInput">Пароль</label>
+                        </div>
+
+                        <button class="btn btn-success w-100 py-2 mb-3" type="submit">
+                            Зарегистрироваться
+                        </button>
+                    </form>
+
+                    <div class="text-center">
+                        <p class="mb-2">Уже есть аккаунт?</p>
+                        <a href="{{ url_for('login') }}" class="btn btn-outline-success">
+                            Войти
+                        </a>
+                        <br>
+                        <a href="{{ url_for('index') }}" class="btn btn-link mt-2">
+                            На главную
+                        </a>
+                    </div>
+                </div>
             </div>
-             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="emailInput" placeholder="Почта" name="email">
-                <label for="emailInput">Почта</label>
-            </div>
-             <div class="form-floating mb-2">
-                <input type="text" class="form-control" id="cityInput" placeholder="Город" name="city">
-                <label for="cityInput">Город</label>
-            </div>
-             <div class="form-floating mb-2">
-                <input type="date" class="form-control" id="birthdayInput" name="birthday">
-                <label for="birthdayInput">День рождения</label>
-            </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="passwordInput" placeholder="Пароль" name="password">
-                <label for="passwordInput">Пароль</label>
-            </div>
-            <button class="btn mt-2 mb-2 btn-primary w-100 py-2" type="submit">Регистрация</button>
-        </form>
-        <a href="/login" class="btn btn-link">Войти</a>
-        <a href="/" class="btn btn-link">Главная</a>
+        </div>
     </div>
+</div>
 {% endblock %}
