--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,11 +33,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('show_concerts') }}">Концерты</a>
                 </li>
+                {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('profile') }}">Профиль</a>
+                </li>
+                {% endif %}
                 <li class="nav-item">
                     {% if current_user.is_authenticated %}
-                        <span class="nav-link">Привет, {{ current_user.name }}!</span>
-                </li>
-                <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Выйти</a>
                     {% else %}
                         <a class="nav-link" href="{{ url_for('login') }}">Войти</a>
