--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,9 +34,15 @@
                     <a class="nav-link" href="{{ url_for('show_concerts') }}">Концерты</a>
                 </li>
                 {% if current_user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('profile') }}">Профиль</a>
-                </li>
+                    {% if current_user.is_admin %}
+                        <li class="nav-item">
+                            <a class="nav-link text-warning" href="{{ url_for('manage_concerts') }}">
+                                <i class="fa fa-cog"></i> Управление</a>
+                        </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('profile') }}">Профиль</a>
+                    </li>
                 {% endif %}
                 <li class="nav-item">
                     {% if current_user.is_authenticated %}
